feat: complete Node 14 invitation links
