# internal/identity/browser_session.go
@@ -9,4 +9,5 @@ type BrowserSession struct {
 	IdentityProvedAt    time.Time
 	IdentityProofMethod Method
 	Purpose             ProofPurpose
+	InvitationID        string
 }
